Updated .gitignore to ignore Unity in Action sample code

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,10 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#############
+## Misc. Files
+#############
+
+#Unity In Action sample code
+Unity_In_Action_Sample_Code/
